New tokens scanner implemented in Scanner.java to overtake CustomScanner.java. Benchmarks shows it is 347x faster and does not choke on large input text